update: generate open api
