# docs/swagger.json
@@ -9,11 +9,6 @@
     "paths": {
         "/user": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Create new user",
                 "consumes": [
                     "application/json"
@@ -25,6 +20,7 @@
                     "user"
                 ],
                 "summary": "Create new user",
+                "operationId": "CreateUser",
                 "parameters": [
                     {
                         "description": "idToken",
@@ -49,15 +45,45 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/userhandler.UserDto"
+                            "$ref": "#/definitions/UserDto"
                         }
+                    }
+                }
+            }
+        },
+        "/user/{id}": {
+            "get": {
+                "description": "Get user by userId",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get user by userId",
+                "operationId": "GetUserByUserId",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "userId",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
         }
     },
     "definitions": {
-        "userhandler.UserDto": {
+        "UserDto": {
             "type": "object",
             "properties": {
                 "id": {
